{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 62,
  "lineage": "6e1065de-db47-ee9b-7c58-55e6a214a75f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:security-group/sg-0dbd591f4ca9b52cc",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0dbd591f4ca9b52cc",
            "ingress": [],
            "name": "mypsgitops-eksclusteraz-cluster-2024072309224514480000000c",
            "name_prefix": "mypsgitops-eksclusteraz-cluster-",
            "owner_id": "637423467401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mypsgitops-eksclusteraz-cluster"
            },
            "tags_all": {
              "Name": "mypsgitops-eksclusteraz-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:security-group/sg-07ea84ae28ba0d4b0",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07ea84ae28ba0d4b0",
            "ingress": [],
            "name": "mypsgitops-eksclusteraz-node-2024072309224515410000000d",
            "name_prefix": "mypsgitops-eksclusteraz-node-",
            "owner_id": "637423467401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mypsgitops-eksclusteraz-node",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "owned"
            },
            "tags_all": {
              "Name": "mypsgitops-eksclusteraz-node",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1963108286",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbd591f4ca9b52cc",
            "security_group_rule_id": "sgr-07be83048c8b8c167",
            "self": false,
            "source_security_group_id": "sg-07ea84ae28ba0d4b0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2198626489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0a12e579c329d2d15",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-281298358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0ed267903b932810d",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-670437357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-063950b4d43918676",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4004800635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0db5129675e058e29",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4259861594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-06ae2131349f17327",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2571724689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0ec35228043ba375d",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1406583616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-02c3e26ade5391883",
            "self": false,
            "source_security_group_id": "sg-0dbd591f4ca9b52cc",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-674299115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0cbe17efecaf2dcf1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-6683842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0faedd1ad7a014f44",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2755288877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07ea84ae28ba0d4b0",
            "security_group_rule_id": "sgr-0b5e239935042ccbb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:network-acl/acl-029fd0919a668d4bb",
            "default_network_acl_id": "acl-029fd0919a668d4bb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-029fd0919a668d4bb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423467401",
            "subnet_ids": [
              "subnet-004e306178d441806",
              "subnet-00559566ba409202e",
              "subnet-01c714a2825e6ecd4",
              "subnet-0221133e9f00e6496",
              "subnet-09409787c554890ce",
              "subnet-0e60f1f9bc6929d65"
            ],
            "tags": {
              "Name": "pcvps-eks-default"
            },
            "tags_all": {
              "Name": "pcvps-eks-default"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:route-table/rtb-0601296cc18d10d53",
            "default_route_table_id": "rtb-0601296cc18d10d53",
            "id": "rtb-0601296cc18d10d53",
            "owner_id": "637423467401",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "pcvps-eks-default"
            },
            "tags_all": {
              "Name": "pcvps-eks-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:security-group/sg-04a96d951c5228254",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04a96d951c5228254",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423467401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pcvps-eks-default"
            },
            "tags_all": {
              "Name": "pcvps-eks-default"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdccb6a744bcf8ca",
            "domain": "vpc",
            "id": "eipalloc-0fdccb6a744bcf8ca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-190-132.compute-1.amazonaws.com",
            "public_ip": "34.193.190.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pcvps-eks-us-east-1a"
            },
            "tags_all": {
              "Name": "pcvps-eks-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:internet-gateway/igw-0b7e0cbec107d6f01",
            "id": "igw-0b7e0cbec107d6f01",
            "owner_id": "637423467401",
            "tags": {
              "Name": "pcvps-eks"
            },
            "tags_all": {
              "Name": "pcvps-eks"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdccb6a744bcf8ca",
            "association_id": "eipassoc-053ee012d11d587b8",
            "connectivity_type": "public",
            "id": "nat-0a11c9e298a80e352",
            "network_interface_id": "eni-0b8cee815f4c4ceb7",
            "private_ip": "172.20.4.17",
            "public_ip": "34.193.190.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0221133e9f00e6496",
            "tags": {
              "Name": "pcvps-eks-us-east-1a"
            },
            "tags_all": {
              "Name": "pcvps-eks-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00dc84b4e72a735141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a11c9e298a80e352",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00dc84b4e72a73514",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7e0cbec107d6f01",
            "id": "r-rtb-09b98062bf8b26ec31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b98062bf8b26ec3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:route-table/rtb-00dc84b4e72a73514",
            "id": "rtb-00dc84b4e72a73514",
            "owner_id": "637423467401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pcvps-eks-private"
            },
            "tags_all": {
              "Name": "pcvps-eks-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:route-table/rtb-09b98062bf8b26ec3",
            "id": "rtb-09b98062bf8b26ec3",
            "owner_id": "637423467401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pcvps-eks-public"
            },
            "tags_all": {
              "Name": "pcvps-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00499a624caa78c1c",
            "route_table_id": "rtb-00dc84b4e72a73514",
            "subnet_id": "subnet-0e60f1f9bc6929d65"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f197a61e8239411",
            "route_table_id": "rtb-00dc84b4e72a73514",
            "subnet_id": "subnet-09409787c554890ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d3bb241de918a3",
            "route_table_id": "rtb-00dc84b4e72a73514",
            "subnet_id": "subnet-01c714a2825e6ecd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f950ff6b4f2634",
            "route_table_id": "rtb-09b98062bf8b26ec3",
            "subnet_id": "subnet-0221133e9f00e6496"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01880deedfd6c8fc3",
            "route_table_id": "rtb-09b98062bf8b26ec3",
            "subnet_id": "subnet-00559566ba409202e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faac9473a1a97e74",
            "route_table_id": "rtb-09b98062bf8b26ec3",
            "subnet_id": "subnet-004e306178d441806"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-0e60f1f9bc6929d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60f1f9bc6929d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-private-us-east-1a",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-private-us-east-1a",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-09409787c554890ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09409787c554890ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-private-us-east-1b",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-private-us-east-1b",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-01c714a2825e6ecd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c714a2825e6ecd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-private-us-east-1c",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-private-us-east-1c",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-0221133e9f00e6496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0221133e9f00e6496",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-public-us-east-1a",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-public-us-east-1a",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-00559566ba409202e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00559566ba409202e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-public-us-east-1b",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-public-us-east-1b",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:subnet/subnet-004e306178d441806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004e306178d441806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423467401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcvps-eks-public-us-east-1c",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pcvps-eks-public-us-east-1c",
              "kubernetes.io/cluster/mypsgitops-eksclusteraz": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a4f731ee7a34c1e5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423467401:vpc/vpc-0a4f731ee7a34c1e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-029fd0919a668d4bb",
            "default_route_table_id": "rtb-0601296cc18d10d53",
            "default_security_group_id": "sg-04a96d951c5228254",
            "dhcp_options_id": "dopt-0e48c2ffe54c1d8ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4f731ee7a34c1e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0601296cc18d10d53",
            "owner_id": "637423467401",
            "tags": {
              "Name": "pcvps-eks"
            },
            "tags_all": {
              "Name": "pcvps-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}